--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar.png"
-          alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
+          src="./assets/avatar.jpeg"
+          alt="Foto com o cabelo solto, sorrindo um pouco e iluminação mais azulada."
         />
         <p>@maykbrito</p>
       </div>
@@ -35,11 +35,11 @@
         </li>
 
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="#">Baixar e-book do NLW</a>
         </li>
 
         <li>
-          <a href="https://github.com/maykbrito">Ver meu portfólio</a>
+          <a href="https://github.com/natifss">Ver meu portfólio</a>
         </li>
 
         <li>
@@ -49,11 +49,11 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
+        <a href="https://github.com/natifss" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://instagram.com/maykbrito" target="_blank">
+        <a href="https://instagram.com/natalicfsantos" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
@@ -61,13 +61,13 @@
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
+        <a href="https://linkedin.com/in/natalicristineferreirasantos" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
 
       <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
+        Feito com ♥ pela <a href="https://instagram.com/natalicfsantos">Natali</a>
       </footer>
     </div>
 
