--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <footer>
-        Feito com ♥ pela <a href="https://instagram.com/natalicfsantos">Natali</a>
+        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
       </footer>
     </div>
 
